[project]
name = "langchain-llm-agent"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai<=2.1",
    "langchain-openai>=0.3.28",
    "langsmith>=0.4.8",
    "matplotlib>=3.10.3",
    "openai>=1.97.1",
    "pypdf>=5.8.0",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
    "watchdog>=6.0.0",
    "wikipedia>=1.4.0",
]
